[gd_scene load_steps=2 format=3 uid="uid://lobby_screen_id"]

[ext_resource type="Script" path="res://scripts/screens/lobby_screen.gd" id="1_script"]

[node name="LobbyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Multiplayer Lobby"
horizontal_alignment = 1

[node name="PlayerListContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Player1Label" type="Label" parent="VBoxContainer/PlayerListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "1. Waiting for player..."
horizontal_alignment = 1

[node name="Player2Label" type="Label" parent="VBoxContainer/PlayerListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "2. Waiting for player..."
horizontal_alignment = 1

[node name="Player3Label" type="Label" parent="VBoxContainer/PlayerListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "3. Waiting for player..."
horizontal_alignment = 1

[node name="Player4Label" type="Label" parent="VBoxContainer/PlayerListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "4. Waiting for player..."
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="InviteButton" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Invite Friend"

[node name="StartGameButton" type="Button" parent="VBoxContainer/Buttons"]
visible = false
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Start Game"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"

[connection signal="pressed" from="VBoxContainer/Buttons/InviteButton" to="." method="_on_invite_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/StartGameButton" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]